# QPLEX

./: .gitignore  README.md  environment.yml  example.py  main.ipynb  main.py  modified_mate-1.0-py3-none-any.whl  note.txt  plot_comparison.ipynb  pyproject.toml  quick_test.py  req.txt  requirements.txt  temp.py  test.ipynb  test.py  test_installation.py  test_rl.ipynb  train_mappo.py  train_qplex_mate.py
algorithms/mappo/: buffer.py  mappo.py  model.py
algorithms/qplex/: agent.py  model.py
algorithms/qplex_dev/: agent.py  learner.py  mixer.py
algorithms/utils/: act.py  distributions.py  util.py  valuenorm.py
common_net/: activations.py  att_block.py  common.py  moe.py  utils.py
common_net/attentions/: __init__.py  base_attn.py  linear_attn.py  mha.py
configs/: mappo_4v4_9.yaml  mappo_4v8_0.yaml  qplex_4v4_9.yaml  qplex_4v8_0.yaml
deeprec/: agent.py  model.py  train.py
gym_agent/: __init__.py
gym_agent/core/: __init__.py  agent_base.py  buffers.py  polices.py
logs/: config.yaml  eval_results_10000.json  eval_results_20000.json  eval_results_30000.json  eval_results_40000.json  training_stats.json
logs/mappo/: config.yaml  eval_results_10000.json  eval_results_12000.json  eval_results_14000.json  eval_results_16000.json  eval_results_18000.json  eval_results_2000.json  (+15 more)
mate/: constants.py  entities.py  environment.py  pygame_env.py
net/: linear_att.py
networks/: base_networks.py  rnn_networks.py
new_network/: optimized_qplex.py
training_dev_qplex/: advanced_training.py  curriculum.py  monitoring.py  reward_shaping.py  state_representation.py
(+79 files in other folders)
