[project]
name = "mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.0",
    "matplotlib>=3.10.6",
    "pygame>=2.6.1",
    "pyglet==1.5.27",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
